--- a/editor-ui/sass/_editor.scss
+++ b/editor-ui/sass/_editor.scss
@@ -5714,26 +5714,15 @@ strong {
     }
 }
 
-.ui-label.cursor-tooltip {
+.pcui-label.cursor-tooltip {
     font-family: "Lucida Console", Monaco, monospace;
-    font-weight: normal;
     font-size: 10px;
-    display: block;
     position: absolute;
     top: -26px;
     left: 8px;
     background-color: #181e20;
-    margin: 0;
     padding: 0 6px;
     line-height: 18px;
-    opacity: 1;
-    visibility: visible;
-    transition: opacity 100ms, visibility 100ms;
-}
-.ui-label.cursor-tooltip.hidden {
-    display: block;
-    opacity: 0;
-    visibility: hidden;
 }
 
 .ui-panel.sound-slots {
