--- a/editor-ui/sass/_editor.scss
+++ b/editor-ui/sass/_editor.scss
@@ -4131,111 +4131,107 @@ strong {
     }
 }
 
-.ui-overlay.help-controls {
-    @extend .noSelect;
+.pcui-overlay.help-controls {
 
-    > .content {
+    > .pcui-overlay-content {
+        z-index: 1;
         width: 512px;
         height: 640px;
-        left: calc(50% - 256px);
-        top: calc(50% - 320px);
 
         > .header {
-            display: block;
-            margin: 0;
-            padding-left: 16px;
-            text-transform: uppercase;
-            font-size: 16px;
-            line-height: 48px;
-            color: $text-darkest;
             background-color: $bcg-darker;
 
-            > .icon {
-                @extend .font-icon;
-                font-size: 20px;
-                margin-right: 8px;
+            > .pcui-label {
+                margin: 0;
+                padding-left: 16px;
+                font-size: 16px;
+                line-height: 48px;
+
+                &:before {
+                    @extend .font-icon;
+                    content: '\E136';
+                    font-size: 20px;
+                    margin-right: 8px;
+                }
             }
-            > .close {
-                @extend .font-icon;
+
+            > .pcui-button {
                 float: right;
                 margin: 0;
-                padding: 0;
                 border: none;
+                border-radius: 0;
                 width: 48px;
                 height: 48px;
                 line-height: 48px;
                 font-size: 20px;
-                text-align: center;
-                color: $text-darkest;
                 background-color: transparent;
 
                 &:hover {
                     color: $text-active;
                     background-color: $bcg-darkest;
+                    box-shadow: none;
                 }
             }
         }
+
         > img.top {
             display: block;
-            width: 480px;
-            height: auto;
             padding: 0 16px;
             background-color: $bcg-darker;
         }
+
         > .container {
-            > .content {
-                height: 400px;
-                overflow-x: hidden;
-                overflow-y: auto;
+            height: 400px;
+            overflow-x: hidden;
+            overflow-y: auto;
 
-                > .row {
-                    height: 38px;
-                    padding-right: 4px;
-                    border-bottom: 1px solid $bcg-darker;
-                    overflow: hidden;
+            > .row {
+                height: 38px;
+                padding-right: 4px;
+                border-bottom: 1px solid $bcg-darker;
+                overflow: hidden;
 
-                    &:last-child {
-                        border-bottom: none;
-                    }
-                    > .buttons {
+                &:last-child {
+                    border-bottom: none;
+                }
+                > .buttons {
+                    float: left;
+                    min-width: 128px;
+                    margin: 5px 16px 5px 5px;
+                    white-space: nowrap;
+
+                    > .button {
                         float: left;
-                        min-width: 128px;
-                        margin: 5px 16px 5px 5px;
-                        white-space: nowrap;
+                        margin: 2px;
+                        padding: 0 12px;
+                        line-height: 24px;
+                        font-size: 12px;
+                        border-radius: 2px;
+                        color: $text-primary;
+                        background-color: $bcg-darker;
+                    }
+                    > .divider {
+                        float: left;
+                        line-height: 28px;
+                        font-size: 12px;
+                        margin: 0 2px;
 
-                        > .button {
-                            float: left;
-                            margin: 2px;
-                            padding: 0 12px;
-                            line-height: 24px;
-                            font-size: 12px;
-                            border-radius: 2px;
-                            color: $text-primary;
-                            background-color: $bcg-darker;
+                        &.plus {
+                            margin: 0 -1px;
                         }
-                        > .divider {
-                            float: left;
-                            line-height: 28px;
-                            font-size: 12px;
-                            margin: 0 2px;
-
-                            &.plus {
-                                margin: 0 -1px;
-                            }
-                            &.or {
-                                margin: 0 4px;
-                            }
+                        &.or {
+                            margin: 0 4px;
                         }
                     }
-                    > .title {
-                        line-height: 38px;
+                }
+                > .title {
+                    line-height: 38px;
 
-                        > .icon {
-                            @extend .font-icon;
-                            float: right;
-                            margin: 0 8px;
-                            font-size: 18px;
-                        }
+                    > .icon {
+                        @extend .font-icon;
+                        float: right;
+                        margin: 0 8px;
+                        font-size: 18px;
                     }
                 }
             }
