--- a/editor-ui/sass/_editor.scss
+++ b/editor-ui/sass/_editor.scss
@@ -2230,24 +2230,27 @@ strong {
                   border-color: $text-active;
               }
           }
-          > .pin {
+          > .lock {
               position: absolute;
               top: 0;
               right: 0;
               width: 24px;
               height: 24px;
               line-height: 26px;
-              text-align: center;
               padding: 0;
               margin: 0;
               border: none;
+              border-radius: 0;
               color: rgba($text-primary, .75);
               background-color: rgba($bcg-darker, .5);
-              @extend .font-icon;
 
               &.active {
                   color: $text-active;
-                  background-color: transparent;
+                  box-shadow: none;
+
+                  &:before {
+                      content: '\E341';
+                  }
               }
               &:hover {
                   color: $text-primary;
