--- a/editor-ui/sass/_editor.scss
+++ b/editor-ui/sass/_editor.scss
@@ -3258,32 +3258,33 @@ strong {
 
 }
 
-.ui-panel.chat-widget {
+.pcui-panel.chat-widget {
     position: absolute;
     bottom: 36px;
     left: 4px;
     width: 240px;
+    height: 192px;
 
-    &.folded {
+    &.pcui-collapsed {
         width: 100px;
 
-        > .ui-header {
-            &:after {
+        > .pcui-panel-header {
+            color: $text-secondary;
+
+            &:before {
                 content: '\E233';
+                color: $text-secondary;
             }
             > .typers {
                 display: none;
             }
-            > .notifyToggle {
+            > .pcui-button {
                 display: none;
             }
         }
     }
-    &.expanded {
-        display: none;
-    }
     &.notify {
-        > .ui-header {
+        > .pcui-panel-header {
             &:after {
                 color: $text-active;
             }
@@ -3292,26 +3293,27 @@ strong {
             }
         }
     }
-    > .ui-header {
-        &:after {
-            content: '\E233';
-            color: $text-secondary;
-            line-height: 34px;
+    > .pcui-panel-header {
+
+        // header collapsible hover state
+        &:hover {
+            color: $text-primary;
+            &:before {
+                color: $text-primary;
+            }
         }
-        > .title {
-            text-transform: uppercase;
-            line-height: 34px;
+        &:before {
+            content: '\E233';
         }
         > .typers {
             float: right;
             max-width: 132px;
             padding-right: 4px;
-            @extend .font-regular;
             font-size: 10px;
             text-overflow: ellipsis;
+            order: 0;
             overflow: hidden;
             color: $text-secondary;
-            pointer-events: none;
 
             > .single,
             > .double,
@@ -3326,21 +3328,15 @@ strong {
                 }
             }
         }
-        > .notifyToggle {
+        > .notifications {
+            border-radius: 0;
+            color: $text-darkest;
             float: right;
-            border: none;
+            font-size: 18px;
+            order: 1;
+            overflow: initial;
             width: 32px;
             height: 32px;
-            line-height: 32px;
-            margin: 0;
-            padding: 0;
-            @extend .font-icon;
-            font-size: 18px;
-            font-weight: bold;
-            text-align: center;
-            cursor: pointer;
-            color: $text-darkest;
-            background-color: transparent;
 
             &.active {
                 color: $text-secondary;
@@ -3348,16 +3344,16 @@ strong {
             &:hover {
                 color: $text-primary;
                 background-color: $bcg-darkest;
+                box-shadow: none;
             }
         }
         > .number {
             display: none;
             float: right;
-            margin-top: 8px;
             margin-right: 4px;
             padding: 0 6px;
             height: 18px;
-            line-height: 19px;
+            line-height: 18px;
             border-radius: 9px;
             pointer-events: none;
 
@@ -3372,75 +3368,69 @@ strong {
             }
         }
     }
-    > .content {
+    > .pcui-panel-content {
         height: 160px;
 
         > .messages {
-            height: 128px;
+            height: 124px;
+            overflow-x: hidden;
+            padding-bottom: 4px;
+            user-select: text;
+            width: 240px;
+            word-break: break-word;
 
-            -webkit-touch-callout: auto;
-            -webkit-user-select: auto;
-            -khtml-user-select: auto;
-            -moz-user-select: auto;
-            -ms-user-select: auto;
-            user-select: auto;
+            > .divider {
+                background-color: $bcg-darker;
+                margin: 4px 8px;
+                height: 1px;
+            }
+            > .message + .message.multi {
+                margin-top: -4px;
+            }
+            > .message.multi + .message.multi {
+                margin-top: 0px;
+            }
+            > .message {
+                margin: 4px;
+                padding-left: 18px;
+                line-height: 14px;
+                font-size: 12px;
 
-            > .content {
-                width: 240px;
-                overflow-x: hidden;
-                padding-bottom: 4px;
-                word-break: break-word;
-
-                > .divider {
-                    background-color: $bcg-darker;
-                    margin: 4px 8px;
-                    height: 1px;
+                &.multi {
+                    margin: 0 4px 0 4px;
                 }
-                > .message + .message.multi {
-                    margin-top: -4px;
+                > img {
+                    vertical-align: text-bottom;
+                    margin-right: 4px;
+                    margin-left: -18px;
+                    @extend .noSelect;
                 }
-                > .message.multi + .message.multi {
-                    margin-top: 0px;
-                }
-                > .message {
-                    margin: 4px;
-                    padding-left: 18px;
-                    line-height: 14px;
-                    font-size: 12px;
+                > span {
+                    vertical-align: text-top;
 
-                    &.multi {
-                        margin: 0 4px 0 4px;
+                    &.username {
+                        font-weight: bold;
+                        color: $text-primary;
                     }
-                    > img {
-                        vertical-align: text-bottom;
-                        margin-right: 4px;
-                        margin-left: -18px;
-                        @extend .noSelect;
-                    }
-                    > span {
-                        vertical-align: text-top;
-
-                        &.username {
-                            font-weight: bold;
-                            color: $text-primary;
-                        }
-                    }
-                }
-                > .system {
-                    margin: 4px;
-                    line-height: 12px;
-                    font-size: 12px;
-                    font-weight: bold;
-                    color: $text-active;
                 }
             }
+            > .system {
+                margin: 4px;
+                line-height: 12px;
+                font-size: 12px;
+                font-weight: bold;
+                color: $text-active;
+            }
         }
-        > .ui-text-field {
-            margin: 0;
+        > .pcui-text-input {
             border: none;
-            width: 240px;
             height: 32px;
+            margin: 0;
+            width: 240px;
 
+            &.pcui-focus, &:hover {
+                box-shadow: none;
+            }
             &:after {
                 right: auto;
                 left: 0;
@@ -3460,10 +3450,13 @@ strong {
                 > .clear {
                     display: block;
                 }
-                > .field {
+                > input {
                     color: $text-primary;
                     width: calc(100% - 40px);
                 }
+            }
+            > input {
+                padding: 0 8px;
             }
             > .clear {
                 display: none;
