Migrate code editor status bar to PCUI (#1747)
Co-authored-by: Will Eastcott <will@playcanvas.com>

--- a/editor-ui/sass/code-editor-v2/_code-editor.scss
+++ b/editor-ui/sass/code-editor-v2/_code-editor.scss
@@ -382,10 +382,11 @@ strong {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 
-    .ui-label {
+    .pcui-label {
         margin: 0 0 0 5px;
         height: 32px;
         line-height: 32px;
+        vertical-align: bottom;
 
         color: $status-log;
 
@@ -403,18 +404,18 @@ strong {
         }
 
         &.branch-name {
-          max-width: 150px;
-          padding-right: 10px;
-          border-right: 1px solid $border-primary;
-          margin-right: 5px;
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          &::before {
-            @extend .font-icon;
-            content: '\E399';
+            max-width: 150px;
+            padding-right: 10px;
+            border-right: 1px solid $border-primary;
             margin-right: 5px;
-          }
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            &::before {
+                @extend .font-icon;
+                content: '\E399';
+                margin-right: 5px;
+            }
         }
     }
 
