--- a/editor-ui/sass/_editor.scss
+++ b/editor-ui/sass/_editor.scss
@@ -3012,12 +3012,20 @@ strong {
         }
     }
 
-    > .pcui-container.camera {
+    > .ui-panel.camera {
+        position: relative;
+        display: flex;
         justify-content: center;
+        align-items: center;
         float: right;
         height: 33px;
         margin: 0 2px 0 0;
+        padding: 0;
+        border: none;
+        @extend .font-regular;
         font-size: 12px;
+        text-align: center;
+        color: rgba($text-primary, .75);
         background-color: rgba($bcg-darker, .5);
         cursor: pointer;
 
@@ -3026,69 +3034,63 @@ strong {
             background-color: rgba($bcg-darker, .75);
         }
 
-        > .pcui-label {
-            line-height: 22px;
-            margin: 3px;
-            padding: 0 10px;
-            width: fit-content;
+        > .content {
+            > .ui-label {
+                padding: 0 10px;
+                width: fit-content;
 
-            &::before {
-                float: left;
+                &::before {
+                    float: left;
 
-                @extend .font-icon;
-                content: '\E212';
-                margin-right: 7px;
-                font-size: 14px;
+                    @extend .font-icon;
+                    content: '\E212';
+                    margin-right: 7px;
+                    font-size: 14px;
+                }
             }
-        }
 
-        > .pcui-container.camera-options {
-            position: absolute;
-            padding: 10px;
-            top: 33px;
-            right: 0;
-            text-align: start;
-            min-width: 150px;
-            max-height: 300px;
-            overflow-y: auto;
-            overflow-x: hidden;
-            background-color: rgba($bcg-darker, .75);
-
-            .pcui-container {
-                flex-direction: row;
-                line-height: 22px;
-                width: 100%;
-                background: transparent;
-
-                .pcui-boolean-input {
-                    margin: 7px 3px 3px 3px;
-                    vertical-align: text-bottom;
+            > .ui-panel.camera-options {
+                > .content {
+                    position: absolute;
+                    display: none;  // Hidden by default
+                    padding: 10px;
+                    top: 3px;
+                    right: 0;
+                    flex-direction: column;
+                    align-items: start;
+                    text-align: start;
+                    min-width: 150px;
+                    max-height: 300px;
+                    overflow-y: auto;
+                    overflow-x: hidden;
+                    background-color: rgba($bcg-darker, .75);
                 }
 
-                .pcui-radio-button {
+                .ui-panel {
+                    width: 100%;
+                    background: transparent;
+
+                    .ui-label {
+                        max-width: 200px;
+                        min-height: 20px;
+                        word-wrap: break-word;
+                        white-space: pre-wrap;
+                    }
+
+                }
+
+                .divider {
+                    > .content {
+                        height: 3px;
+                    }
+                    position: relative;
                     align-self: center;
-                    height: 16px;
-                    margin: 0 3px 0 2px;
-                    width: 16px;
+                    width: 90%;
+                    background-color: rgba($bcg-darker, .75);
+                    margin: 5px 0;
                 }
 
-                .pcui-label {
-                    margin: 3px;
-                    max-width: 200px;
-                    min-height: 20px;
-                    word-wrap: break-word;
-                    white-space: pre-wrap;
-                    vertical-align: bottom;
-                }
             }
-
-            .divider {
-                width: 90%;
-                height: 3px;
-                background-color: rgba($bcg-darker, .75);
-                margin: 5px 0;
-            }
-
         }
     }
 
